--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ doks:
     color_theme: # Available themes: blue (default), green, purple, red and yellow
     header:
         logo:
-            text: Project name
+            text: Rookie
             image:
         nav:
             - item_name: Item 1
@@ -16,18 +16,12 @@ doks:
     footer:
         content:
             logo:
-                text: Project name
+                text: Rookie
                 image:
-            copyright: Copyright &copy; 2017. - Project name <br>All rights reserved.
+            copyright: Copyright &copy; 2018. - pjc0247 <br>All rights reserved.
         social_list:
-            - network_name: facebook
-              profile_url: '#'
-            - network_name: twitter
-              profile_url: '#'
-            - network_name: instagram
-              profile_url: '#'
-            - network_name: youtube
-              profile_url: '#'
+            - network_name: github
+              profile_url: 'http://www.github.com/pjc0247'
     google_analytics:
         tracking_code: # Add your Google Analytics tracking code to activate Google Analytics
     comments:
